Fix text align for jetpack free

--- a/client/my-sites/plans/jetpack-plans/product-store/style.scss
+++ b/client/my-sites/plans/jetpack-plans/product-store/style.scss
@@ -4,7 +4,6 @@
         flex-direction: column;
         align-items: center;
         margin: 3em 0;
-        padding: 0 1.5em;
 
         &--headline {
             font-size: $font-title-large;
@@ -12,6 +11,7 @@
         }
         &--info {
             font-size: $font-body-small;
+            text-align: center;
         }
     }
     .button {
